--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -47,19 +47,19 @@
 #  command: systemctl get-default
 #  register: runlevel
 
-#- name: 'Change default runlevel'
-#  command: systemctl set-default rock.target
-#  when: runlevel.stdout != "rock.target"
+- name: 'Change default runlevel'
+  command: systemctl set-default rock.target
+  when: runlevel is defined and runlevel.stdout != "rock.target"
 
-#- name: 'Check current runlevel'
-#  command: systemctl is-active rock.target
-#  register: runlevel_active
-#  failed_when: runlevel_active.rc != 3
-#  ignore_errors: yes
+- name: 'Check current runlevel'
+  command: systemctl is-active rock.target
+  register: runlevel_active
+  failed_when: runlevel_active.rc != 0
+  ignore_errors: yes
 
-#- name: 'Switch to rock.target'
-#  command: systemctl isolate rock.target
-#  when: runlevel_active.stdout != "active"
+- name: 'Switch to rock.target'
+  command: systemctl isolate rock.target
+  when: runlevel_active is defined and runlevel_active.stdout != "active"
 
 #- name: Install rock_status script
 #  template:
