--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -64,6 +64,11 @@
     - kafka
   gather_facts: no
 
+- hosts: moloch
+  roles:
+    - moloch
+  gather_facts: no
+
 - hosts: bro
   roles:
     - bro
