Overhauled Kafka and Zookeeper
- Swapped to RockNSM's version of Zookeeper and Kafka
- Configured container environment variables
- Debugged the issue with sensors and secondary servers failing to label

--- a/playbooks/inventory.yml
+++ b/playbooks/inventory.yml
@@ -22,16 +22,16 @@ all:
         nodes:
 
     kibana:
-#      children:
-#        master-servers:
+      children:
+        master-servers:
 
     elasticsearch:
-#      children:
-#        master-servers:
+      children:
+        master-servers:
 
     logstash:
-#      children:
-#        master-servers:
+      children:
+        master-servers:
 
     suricata:
       children:
