--- a/playbooks/roles/moloch/defaults/main.yml
+++ b/playbooks/roles/moloch/defaults/main.yml
@@ -5,20 +5,20 @@
 moloch_image: 'moloch'
 moloch_tag: '0.50.0-1'
 moloch_container_name: 'rock-moloch'
-moloch_port: '8005'
+moloch_port: "8005"
 moloch_monitor_int: 'lo'
 moloch_ip: '0.0.0.0'
-moloch_threads: '2'
-moloch_spi_indices: '3'
-moloch_elastic_url: "{{ es_url }}"
+moloch_threads: "2"
+moloch_spi_indices: "3"
+moloch_elastic_url: "rock-elasticsearch:9200"
 moloch_web_url: "{{ moloch_container_name }}-viewer:{{ moloch_port}}"
 
 # User/Group and permissions for files copied
-moloch_user: 1000
-moloch_group: 1000
-moloch_dir_mode: 0660
-moloch_file_mode: 0644
-moloch_exec_mode: 0755
+moloch_user: "1000"
+moloch_group: "1000"
+moloch_dir_mode: "0660"
+moloch_file_mode: "0644"
+moloch_exec_mode: "0755"
 
 # Username and password for Web login
 moloch_login: 'assessor'
@@ -30,4 +30,10 @@ moloch_data_dir: '{{ rock_data_dir }}/moloch'
 moloch_pcap_dir: '{{ moloch_data_dir }}/raw'
 moloch_logs_dir: '{{ moloch_data_dir }}/logs'
 moloch_config_file: '{{ moloch_dir }}/etc/config.ini'
+#moloch_config_map: '{{ moloch_dir }}/etc/config_map'
+
+# Kubernetes variables
+moloch_pv_data: "moloch-data"
+moloch_pv_size_gb: "1"
+moloch_config_map: "moloch-map"
 ...
