--- a/playbooks/roles/moloch/tasks/main.yml
+++ b/playbooks/roles/moloch/tasks/main.yml
@@ -3,52 +3,48 @@
 ######################################################
 ---
 
-- name: 'Create moloch directory'
+- name: 'Create directories'
   file:
-    path: "{{ moloch_dir }}"
+    path: "{{ item }}"
     owner: "{{ moloch_user }}"
     group: "{{ moloch_group }}"
     mode: "{{ moloch_dir_mode }}"
     state: directory
-
-- name: 'Create log directory'
-  file:
-    path: "{{ moloch_dir }}/logs"
-    owner: "{{ moloch_user }}"
-    group: "{{ moloch_group }}"
-    mode: "{{ moloch_dir_mode }}"
-    state: directory
-
-- name: 'Create pcap directory'
-  file:
-    path: "{{ moloch_dir }}/pcap"
-    owner: "{{ moloch_user }}"
-    group: "{{ moloch_group }}"
-    mode: "{{ moloch_dir_mode }}"
-    state: directory
+  with_items:
+    - "{{ moloch_dir }}"
+    - "{{ moloch_dir }}/logs"
+    - "{{ moloch_dir }}/pcap"
+    - "{{ moloch_dir }}/etc"
 
 - name: 'Copy GeoIP files'
   copy:
-    src: 'files/'
+    src: 'files/{{ item }}'
     dest: "{{ moloch_dir }}/etc/"
     owner: "{{ moloch_user }}"
     group: "{{ moloch_group }}"
+    mode: "{{ moloch_dir_mode }}"
+  with_items:
+    - GeoIP.dat
+    - GeoIPASNum.dat
+    - GeoIPASNumv6.dat
+    - GeoIPv6.dat
+    - ipv4-address-space.csv
 
-- name: 'Copy config.ini'
+- name: 'Copy config files'
   template:
-    src: 'config.ini.j2'
-    dest: "{{ moloch_dir }}/etc/config.ini"
+    src: "templates/{{ item }}"
+    dest: "{{ moloch_dir }}/etc/{{ item }}"
     mode: "{{ moloch_file_mode }}"
     owner: "{{ moloch_user }}"
     group: "{{ moloch_group }}"
-
-- name: 'Copy auto-config script'
-  template:
-    src: 'auto_config_moloch.j2'
-    dest: "{{ moloch_dir }}/etc/auto_config_moloch"
-    mode: "{{ moloch_exec_mode }}"
-    owner: "{{ moloch_user }}"
-    group: "{{ moloch_group }}"
+  with_items:
+    - config.ini
+    - auto_config_moloch
+    - moloch-deploy.yml
+    - capture-service.yml
+    - viewer-service.yml
+    - pv-data.yml
+    - pvc-data.yml
 
 - name: 'Copy moloch compose file'
   template:
@@ -66,7 +62,7 @@
     owner: "{{ rock_data_user }}"
     group: "{{ rock_data_group }}"
 
-- name: 'Build moloch container'
+- name: 'Build moloch image (v{{ moloch_tag }})'
   docker_image:
     name: "{{ moloch_image }}:{{ moloch_tag }}"
     pull: yes
@@ -75,24 +71,48 @@
     dockerfile: "{{ moloch_dir }}/Dockerfile"
   #when: rock_online_install
 
-- name: "Opening port {{ moloch_port }} in firewall"
-  firewalld:
-    port: "{{ moloch_port }}/tcp"
-    permanent: true
-    immediate: true
-    state: enabled
+#- name: "Opening port {{ moloch_port }} in firewall"
+#  firewalld:
+#    port: "{{ moloch_port }}/tcp"
+#    permanent: true
+#    immediate: true
+#    state: enabled
+
+
+- block:
+  - name: "Clean up kube configmap"
+    command: "kubectl --kubeconfig={{ kube_config }} delete configmap {{ moloch_config_map }}"
+  - name: "Clean up kube for deployment "
+    command: "kubectl --kubeconfig={{ kube_config }} delete -f {{ moloch_dir }}/etc/{{ item }}.yml"
+    with_items:
+      - pv-data
+      - pvc-data
+      - capture-service
+      - viewer-service
+      - moloch-deploy
+  #- command: "kubectl --kubeconfig={{ kube_config }} delete -f {{ moloch_dir }}/etc/pvc-data.yml"
+  #- command: "kubectl --kubeconfig={{ kube_config }} delete -f {{ moloch_dir }}/etc/capture-service.yml"
+  #- command: "kubectl --kubeconfig={{ kube_config }} delete -f {{ moloch_dir }}/etc/viewer-service.yml"
+  #- command: "kubectl --kubeconfig={{ kube_config }} delete -f {{ moloch_dir }}/etc/moloch-deploy.yml"
+  ignore_errors: true
 
 - name: "Create kube config"
-  command: 'kubectl --kubeconfig=$KUBECONFIG create configmap {{ kafka_pv_config }} --from-file {{ kafka_config_dir }}'
+  command: 'kubectl --kubeconfig={{ kube_config }} create configmap {{ moloch_config_map }} --from-file {{ moloch_dir }}/etc/{{ item }}'
+  with_items:
+    - config.ini
 
 - name: "Deploy moloch via kube"
-  command: 'kubectl --kubeconfig=$KUBECONFIG create -f {{ kafka_dir }}/{{ item }}.yml'
+  command: "kubectl --kubeconfig={{ kube_config }} create -f {{ moloch_dir }}/etc/{{ item }}.yml"
   with_items:
-    - k-pv-data
+    - pv-data
+    - pvc-data
+    - moloch-deploy
+    - capture-service
+    - viewer-service
 
 - name: "Wait for deployment to finish"
-  command: 'kubectl --kubeconfig=$KUBECONFIG rollout status -f {{ kafka_dir }}/kafka-deploy.yml'
-
+  command: 'kubectl rollout status -f {{ moloch_dir }}/etc/moloch-deploy.yml'
+  ignore_errors: true
 #- name: 'Install moloch service file'
 #  template:
 #    src: 'moloch.service.j2'
