--- a/playbooks/inventory.yml
+++ b/playbooks/inventory.yml
@@ -74,6 +74,7 @@ all:
               data_disk_devices:
               - /dev/sdb
               home_net: "[192.168.0.0/16,10.0.0.0/8,172.16.0.0/12]"
+              bro_interface: ens224
 
         servers:
 
